# AERSP-424-HW-2

./: .gitignore  CMakeLists.txt  Problem#1.cpp  Problem#3.cpp  Problem_5.md  Problem_6.md  README.md
include/: AerospaceControlSystem.cpp  AerospaceControlSystem.h  AirspeedSensor.h  AltitudeSensor.h  Polar_Plot_Generator.m  Sensor.h  SensorFactory.cpp  SensorFactory.h  TemperatureSensor.h  polar_data.csv
src/: Problem_1.cpp  Problem_2.cpp  Problem_4.cpp
